--- a/ride4ever-prometheus/prometheus.yml
+++ b/ride4ever-prometheus/prometheus.yml
@@ -21,22 +21,42 @@ rule_files:
 scrape_configs:
   
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: "prometheus"
+  - job_name: prometheus
 
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
     static_configs:
       - targets: [
-        "localhost:9090",
-        "ride4ever-microservice-account/actuator/propetheus",
-        "ride4ever-microservice-biker/actuator/propetheus",
-        "ride4ever-microservice-broker/actuator/propetheus",
-        "ride4ever-microservice-garage",
-        "ride4ever-microservice-motorcycleclub",
-        "ride4ever-microservice-reservation",
-        "ride4ever-microservice-trip",
+        localhost:9090,
+      ]
+  - job_name: edge-services
+    metrics_path: /actuator/prometheus
+    static_configs:
+      - targets: [
         "ride4ever-service-discovery:8761",
         "ride4ever-service-apigateway:9600",
         "ride4ever-service-configuration:9101"
       ]
+  - job_name: micro-services
+    metrics_path: /actuator/prometheus
+    eureka_sd_configs:
+    #Specify Eureka's service discovery address
+      - server: 'http://ride4ever-service-discovery:8761/eureka'
+    relabel_configs:
+        #Path to rewrite metrics
+      - source_labels: ["__meta_eureka_app_instance_metadata_prometheus_path"]
+        action: replace
+        target_label: __metrics_path__
+        regex: (.+)
+        #Add a custom label sys_ Its value is obtained from the configuration Eureka
+      - source_labels: ["__meta_eureka_app_instance_metadata_sys_module"]
+        action: replace
+        target_label: sys_module
+        regex: (.+)
+        #Override management port
+      - source_labels: [__address__, __meta_eureka_app_instance_metadata_prometheus_port]
+        action: replace
+        regex: ([^:]+)(?::\d+)?;(\d+)
+        replacement: $1:$2
+        target_label: __address__
