--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-biker:
     depends_on:
@@ -59,6 +60,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-broker:
     depends_on:
@@ -69,6 +71,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-garage:
     depends_on:
@@ -79,6 +82,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-geomap:
     depends_on:
@@ -89,6 +93,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-club:
     depends_on:
@@ -99,6 +104,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-recovery:
     depends_on:
@@ -109,6 +115,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-reservation:
     depends_on:
@@ -119,6 +126,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-trip:
     depends_on:
@@ -131,6 +139,7 @@ services:
     networks:
       - network_discovery
       - network_configuration
+      - network_message_broker
     #   - network_database
   ride4ever-microservice-prometheus:
     image: prom/prometheus
@@ -148,10 +157,15 @@ services:
       - network_discovery
     ports:
       - 3000:3000
+  ride4ever-microservice-message-broker:
+    build: ./ride4ever-message-broker
+    restart: always
+    hostname: message-broker
+    networks:
+      - network_message_broker
+    ports:
+      - 61616:61616
 networks:
-  # default:
-  #   external:
-  #     name: ride4ever-backend_default
-  # network_database: {}
   network_discovery: {}
   network_configuration: {}
+  network_message_broker: {}
