--- a/ride4ever-microservice-geomap/pom.xml
+++ b/ride4ever-microservice-geomap/pom.xml
@@ -154,6 +154,12 @@
             <version>8.6.0</version>
         </dependency>
 
+        <!-- JMS support (Message Broker) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+
         <!-- NIRAH-TECHNOLOGY -->
         <dependency>
             <groupId>io.nirahtech</groupId>
