--- a/ride4ever-microservice-motorcycleclub/src/main/resources/application.properties
+++ b/ride4ever-microservice-motorcycleclub/src/main/resources/application.properties
@@ -4,3 +4,5 @@ application.version=@project.version@
 spring.application.name=@project.artifactId@
 
 spring.config.import=configserver:http://ride4ever-service-configuration:9101
+
+activemq.broker-url=tcp://message-broker:61616
