--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <artifactId>ride4ever-backend</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>ride4ever-backend</name>
-    <url>https://github.com/v1/repos/ride4ever-backend-ws</url>
+    <url>https://github.com/Zaroastre/ride4ever-backend</url>
     <scm>
-        <connection>scm:git:ssh://github.com/v1/repos/ride4ever-backend-ws</connection>
+        <connection>scm:git@github.com:Zaroastre/ride4ever-backend.git</connection>
         <tag>HEAD</tag>
     </scm>
     <distributionManagement>
